Started developing the landing page

--- a/site/index.html
+++ b/site/index.html
@@ -3,13 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Alex-Portfolio</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,100' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation-flex.css">
+  <link rel="stylesheet" href="css/foundation-icons.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div class="row">
+  <div class="expanded row">
+    <div class="column small-12">
+      <img id="menu" src="img/menu-button.png">
+    </div>
+  </div>
+  <div class="row centered">
     <div class="small-12 columns">
-      <p>Alex Ferguson</p>
+      <div class="quote">
+        <p id="name">Alex Ferguson</p>
+        <p id="title">UI/UX Designer &amp front-end developer</p>
+        <p id="location">Based in Detroit, Michigan</p>
+      </div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
